<resources>
    <string name="app_name">BurgerShotAdminApp</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="add_product_btn">Add Product</string>
    <string name="view_users">View Users</string>
    <string name="search_product">Search Product</string>
    <string name="view_orders">View Orders</string>
</resources>